<resources>
    <string name="app_name">FinWise</string>
    <string name="app_logo_description">App Logo</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="rs">Rs.</string>
    <string name="change_currency">Change currency</string>
    <string name="first_day_of_week">First day of week</string>
    <string name="monday">Monday</string>
    <string name="change_first_day">Change first day</string>
    <string name="monthly_expenses_by_category">Monthly Expenses by Category</string>
    <string name="total_expenses_rs_0_00">Total Expenses: Rs. 0.00</string>
    <string name="category_summary">Category Summary</string>
    <string name="user_avatar">User avatar</string>
    <string name="username">Username</string>
    <string name="user_example_com">user@example.com</string>
    <string name="app_settings">App Settings</string>
    <string name="app_language">App Language</string>
    <string name="english">English</string>
    <string name="change_language">Change language</string>
    <string name="data_management">Data Management</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_access_your_finance_tracker">Login to access your finance tracker</string>
    <string name="app_logo">App Logo</string>
    <string name="finwise">FinWise</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="didn_t_have_an_account_register">Didn\'t have an account? Register</string>
    <string name="set_budget">Set Budget</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="backup_data">Backup Data</string>
    <string name="backup_data_des">Backup data</string>
    <string name="backup_your_data">Backup your data</string>
    <string name="restore_data">Restore Data</string>
    <string name="restore_data_des">Restore data</string>
    <string name="restore_your_data">Restore your data</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="clear_all_data_des">Clear all data</string>
    <string name="this_will_delete_all_transactions_data">This will delete all transactions data</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="register_to_track_your_finances">Register to track your finances</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="transactions">Transactions</string>
    <string name="search_transactions">Search transactions</string>
    <string name="no_transactions_found">No transactions found</string>
    <string name="add_transaction">Add transaction</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date:</string>
    <string name="_01_jan_2025">01 Jan 2025</string>
    <string name="select_date">Select Date</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="set_monthly_budget">Set Monthly Budget</string>
    <string name="january_2025">January 2025</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="category_name">Category Name</string>
    <string name="_100_00">$100.00</string>
    <string name="_25_0">25.0%</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_title">Transaction Title</string>
</resources>